# mq_test

./: CMakeLists.txt  build.sh
app/: main.cpp
app/utility/: CMakeLists.txt  publisher.cpp  subscriber.cpp
